Fixed harder crops not working in server